--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
             <h5>This is a figure</h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, eum! Sapiente vitae, id, est iusto architecto consequatur quis assumenda facilis reiciendis itaque veritatis atque, voluptatum aliquid nobis doloribus ut odit.</p>
             <figure>
-                <img height="500px" width="100%" src="/banner PH-FB.jpg" alt="">
+                <img height="500px" width="100%" src="./banner PH-FB.jpg" alt="">
                 <figcaption>This is a business banner</figcaption>
                 <h3> &copy This is published on: <time>25 may,2024</time></h3>
             </figure>
